; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_echmcaintr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_stallion.c_stl_echmcaintr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stlbrd = type { i32, i32, i32*, %struct.stlpanel** }
%struct.stlpanel = type { i32 (%struct.stlpanel*, i32)* }

@ECH_INTRPEND = common dso_local global i32 0, align 4
@ECH_PNLINTRPEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stlbrd*)* @stl_echmcaintr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stl_echmcaintr(%struct.stlbrd* %0) #0 {
  %2 = alloca %struct.stlbrd*, align 8
  %3 = alloca %struct.stlpanel*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.stlbrd* %0, %struct.stlbrd** %2, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %54, %1
  %8 = load %struct.stlbrd*, %struct.stlbrd** %2, align 8
  %9 = getelementptr inbounds %struct.stlbrd, %struct.stlbrd* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @inb(i32 %10)
  %12 = load i32, i32* @ECH_INTRPEND, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %55

15:                                               ; preds = %7
  store i32 1, i32* %6, align 4
  store i32 0, i32* %5, align 4
  br label %16

16:                                               ; preds = %51, %15
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.stlbrd*, %struct.stlbrd** %2, align 8
  %19 = getelementptr inbounds %struct.stlbrd, %struct.stlbrd* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = icmp ult i32 %17, %20
  br i1 %21, label %22, label %54

22:                                               ; preds = %16
  %23 = load %struct.stlbrd*, %struct.stlbrd** %2, align 8
  %24 = getelementptr inbounds %struct.stlbrd, %struct.stlbrd* %23, i32 0, i32 2
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %5, align 4
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @inb(i32 %30)
  %32 = load i32, i32* @ECH_PNLINTRPEND, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %50

35:                                               ; preds = %22
  %36 = load %struct.stlbrd*, %struct.stlbrd** %2, align 8
  %37 = getelementptr inbounds %struct.stlbrd, %struct.stlbrd* %36, i32 0, i32 3
  %38 = load %struct.stlpanel**, %struct.stlpanel*** %37, align 8
  %39 = load i32, i32* %5, align 4
  %40 = zext i32 %39 to i64
  %41 = getelementptr inbounds %struct.stlpanel*, %struct.stlpanel** %38, i64 %40
  %42 = load %struct.stlpanel*, %struct.stlpanel** %41, align 8
  store %struct.stlpanel* %42, %struct.stlpanel** %3, align 8
  %43 = load %struct.stlpanel*, %struct.stlpanel** %3, align 8
  %44 = getelementptr inbounds %struct.stlpanel, %struct.stlpanel* %43, i32 0, i32 0
  %45 = load i32 (%struct.stlpanel*, i32)*, i32 (%struct.stlpanel*, i32)** %44, align 8
  %46 = load %struct.stlpanel*, %struct.stlpanel** %3, align 8
  %47 = load i32, i32* %4, align 4
  %48 = and i32 %47, 65532
  %49 = call i32 %45(%struct.stlpanel* %46, i32 %48)
  br label %50

50:                                               ; preds = %35, %22
  br label %51

51:                                               ; preds = %50
  %52 = load i32, i32* %5, align 4
  %53 = add i32 %52, 1
  store i32 %53, i32* %5, align 4
  br label %16

54:                                               ; preds = %16
  br label %7

55:                                               ; preds = %7
  %56 = load i32, i32* %6, align 4
  ret i32 %56
}

declare dso_local i32 @inb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
